<resources>
    <string name="app_name">Level3</string>
    <string name="tv_user_name">Lucile Alvarado</string>
    <string name="tv_settings">Settings</string>
    <string name="tv_career">Career</string>
    <string name="tv_address">Home address</string>
    <string name="mb_edit_profile">Edit profile</string>
    <string name="mb_view_contacts">VIEW MY CONTACTS</string>
    <string name="tv_password">Password</string>
    <string name="tv_remember_me">Remember me</string>
    <string name="or">or</string>
    <string name="register">REGISTER</string>
    <string name="terms_and_conditions">By clicking Register you agree to our Terms\nand Conditions</string>
    <string name="terms_and_conditions_landscape">By clicking Register you agree to our Terms and Conditions</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="sign_in">Sign in</string>
    <string name="fill_out_the_profile">Fill out the profile and go to the application!</string>
    <string name="acquaintance">Let\'s get acquainted</string>
    <string name="bt_google">Google</string>
    <string name="tv_email">E-mail</string>
    <string name="pass_error_short">Please input minimum 8 characters!</string>
    <string name="pass_error_weak">Weak password. Include at least 1 special character!</string>
    <string name="pass_error_empty">Please input password!</string>
    <string name="email_error_format">Wrong e-mail format!</string>
    <string name="pass_helperText_stongPass">Strong password</string>
    <string name="hint_e_mail">E-mail</string>
    <string name="hint_password">Password</string>
    <string name="tv_contacts">Contacts</string>
    <string name="title_activity_add_contact">AddContact</string>
    <!-- Strings used for fragments for navigation -->

    <string name="tv_add_contact">Add contact</string>
    <string name="save">SAVE</string>
    <string name="date_of_birth">Date of birth</string>
    <string name="address">Address</string>
    <string name="phone">Phone</string>
    <string name="email">Email</string>
    <string name="career">Career</string>
    <string name="name">Name</string>
    <string name="undo">Undo</string>
    <string name="has_been_removed">" has been removed"</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tv_edit_profile">Edit Profile</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="tv_profile">Profile</string>
    <string name="mb_message">MESSAGE</string>
    <string name="tn_shared_contact_image">sharedContactImage</string>

</resources>