<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="50"
        android:background="?attr/colorPrimaryVariant"
        android:orientation="vertical">


        <TextView
            android:id="@+id/tv_settings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_normal"
            android:layout_marginTop="@dimen/margin_normal"
            android:text="@string/tv_settings"
            android:textColor="?attr/colorOnPrimary"
            android:textSize="@dimen/text_extra_large" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/img_profile_picture"
            android:layout_width="110dp"
            android:layout_height="110dp"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/margin_normal"
            android:src="@drawable/profile_image"/>


        <TextView
            android:id="@+id/tv_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/text_extra_large"
            android:text="@string/tv_user_name"
            android:textColor="?attr/colorOnPrimary"
            android:textSize="@dimen/text_large" />

        <TextView
            android:id="@+id/tv_career"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/tv_career"
            android:layout_marginTop="@dimen/margin_small"
            android:textColor="?attr/colorSecondary"
            android:textSize="@dimen/text_normal" />

        <TextView
            android:id="@+id/tv_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/margin_normal"
            android:text="@string/tv_address"
            android:textColor="?attr/colorSecondary"
            android:textSize="@dimen/text_normal" />


    </LinearLayout>


    <LinearLayout
        android:id="@+id/ll_bottom_half_of_the_screen"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="50"
        android:background="?attr/colorOnPrimary"
        android:gravity="bottom"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="50dp"
            android:orientation="horizontal"
            android:gravity="center">
            <ImageButton
                android:id="@+id/ib_facebook"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/margin_normal"
                android:background="@drawable/facebook_button"/>
            <ImageButton
                android:id="@+id/ib_linked_in"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/margin_normal"
                android:background="@drawable/linked_in_button"/>
            <ImageButton
                android:id="@+id/ib_instagram"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/margin_normal"
                android:background="@drawable/instagram_button"/>

        </LinearLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/edit_profile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/margin_normal"
            android:layout_marginVertical="@dimen/margin_small"
            android:backgroundTint="?attr/colorOnPrimary"
            app:strokeColor="?attr/colorOnSecondary"
            app:strokeWidth="2dp"
            android:text="@string/mb_edit_profile"
            android:textAllCaps="false"
            android:textColor="?attr/colorOnSecondary"
            android:textSize="@dimen/text_normal" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/mb_view_contacts"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/margin_normal"
            android:layout_marginVertical="@dimen/margin_small"
            android:backgroundTint="?attr/colorPrimary"
            android:padding="18dp"
            android:text="@string/mb_view_contacts"
            android:textSize="@dimen/text_large" />

    </LinearLayout>





</androidx.appcompat.widget.LinearLayoutCompat>