<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <View
        android:id="@+id/v_add_contact_header_bg"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="?attr/colorPrimaryVariant"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </View>

    <ImageButton
        android:id="@+id/ib_arrow_back_editProfile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_normal"
        android:layout_marginTop="@dimen/margin_normal"
        android:background="@drawable/ic_baseline_arrow_back_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ContentDescription">

    </ImageButton>

    <TextView
        android:id="@+id/tv_edit_profile_editProfile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_normal"
        android:text="@string/tv_edit_profile"
        android:textColor="?attr/colorOnPrimary"
        android:textSize="@dimen/text_large"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintVertical_weight="1"
        android:background="?attr/colorOnPrimary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/v_add_contact_header_bg">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/margin_normal"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilo_userName_editProfile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/name"
                app:expandedHintEnabled="false"
                android:textColorHint="?attr/colorOnSecondary"
                app:layout_constraintStart_toStartOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tiet_userName_editProfile"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@android:color/transparent"
                    android:inputType="textPersonName"
                    android:singleLine="true"
                    android:textColor="?attr/colorPrimaryVariant"
                    android:textSize="@dimen/text_large" />
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilo_career_editProfile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/career"
                android:textColorHint="?attr/colorOnSecondary"
                app:expandedHintEnabled="false">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tiet_career_editProfile"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@android:color/transparent"
                    android:singleLine="true"
                    android:textColor="?attr/colorPrimaryVariant"
                    android:textSize="@dimen/text_large" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilo_eMail_editProfile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:textColorHint="?attr/colorOnSecondary"
                app:expandedHintEnabled="false">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tiet_eMail_editProfile"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@android:color/transparent"
                    android:inputType="textPersonName"
                    android:singleLine="true"
                    android:textColor="?attr/colorPrimaryVariant"
                    android:textSize="@dimen/text_large" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilo_phone_editProfile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/phone"
                android:textColorHint="?attr/colorOnSecondary"
                app:expandedHintEnabled="false">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tiet_phone_editProfile"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@android:color/transparent"
                    android:inputType="textPersonName"
                    android:singleLine="true"
                    android:textColor="?attr/colorPrimaryVariant"
                    android:textSize="@dimen/text_large" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilo_address_editProfile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/address"
                android:textColorHint="?attr/colorOnSecondary"
                app:expandedHintEnabled="false">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tiet_address_editProfile"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@android:color/transparent"
                    android:inputType="textPersonName"
                    android:singleLine="true"
                    android:textColor="?attr/colorPrimaryVariant"
                    android:textSize="@dimen/text_large" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilo_birthday_editProfile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/date_of_birth"
                android:textColorHint="?attr/colorOnSecondary"
                app:expandedHintEnabled="false">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tiet_birthday_editProfile"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@android:color/transparent"
                    android:inputType="textPersonName"
                    android:singleLine="true"
                    android:textColor="?attr/colorPrimaryVariant"
                    android:textSize="@dimen/text_large" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/mb_save_editProfile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="@dimen/margin_small"
                android:backgroundTint="?attr/colorPrimary"
                android:padding="18dp"
                android:text="@string/save"
                android:textSize="@dimen/text_large" />

        </LinearLayout>
    </ScrollView>


    <ImageView
        android:id="@+id/iv_newContactPicture"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintDimensionRatio="1:1"
        android:layout_marginTop="@dimen/margin_small"
        android:layout_marginBottom="@dimen/margin_small"
        app:layout_constraintBottom_toBottomOf="@+id/v_add_contact_header_bg"
        app:layout_constraintEnd_toEndOf="@+id/v_add_contact_header_bg"
        app:layout_constraintStart_toStartOf="@+id/v_add_contact_header_bg"
        app:layout_constraintTop_toBottomOf="@+id/tv_edit_profile_editProfile"
        tools:ignore="ContentDescription" />


    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/ib_addPicture"
        android:layout_width="55dp"
        android:layout_height="55dp"
        android:background="@drawable/camera"
        android:layout_marginStart="@dimen/margin_large"
        app:circularflow_defaultRadius="20dp"
        app:layout_constraintCircleRadius="20dp"
        android:layout_marginTop="@dimen/margin_small"
        app:layout_constraintStart_toEndOf="@+id/iv_newContactPicture"
        app:layout_constraintTop_toBottomOf="@+id/tv_edit_profile_editProfile" />


</androidx.constraintlayout.widget.ConstraintLayout>
