<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorPrimaryVariant">

    <View
        android:id="@+id/v_top_half_of_the_screen"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="?attr/colorPrimaryVariant"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </View>

    <ImageButton
        android:id="@+id/ib_arrow_back_contactProfile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_normal"
        android:layout_marginTop="@dimen/margin_normal"
        android:background="@drawable/ic_baseline_arrow_back_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/tv_profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_profile"
        android:textColor="?attr/colorOnPrimary"
        android:layout_marginTop="@dimen/margin_small_150"
        android:textSize="@dimen/text_extra_large"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/ll_bottom_half_of_the_screen"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_profile">


        <ImageView
            android:id="@+id/img_profile_picture"
            android:layout_width="110dp"
            android:layout_height="110dp"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/margin_normal"
            android:src="@drawable/profile_image"
            android:transitionName="contact_picture" />


        <TextView
            android:id="@+id/tv_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/text_extra_large"
            android:text="@string/tv_user_name"
            android:textColor="?attr/colorOnPrimary"
            android:textSize="@dimen/text_large" />

        <TextView
            android:id="@+id/tv_career"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/margin_small"
            android:text="@string/tv_career"
            android:textColor="?attr/colorSecondary"
            android:textSize="@dimen/text_normal" />

        <TextView
            android:id="@+id/tv_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/margin_normal"
            android:text="@string/tv_address"
            android:textColor="?attr/colorSecondary"
            android:textSize="@dimen/text_normal" />


    </LinearLayout>


    <LinearLayout
        android:id="@+id/ll_bottom_half_of_the_screen"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="50"
        android:background="?attr/colorOnPrimary"
        android:gravity="bottom"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/v_top_half_of_the_screen">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="50dp"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/ib_facebook"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/margin_normal"
                android:background="@drawable/facebook_button" />

            <ImageButton
                android:id="@+id/ib_linked_in"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/margin_normal"
                android:background="@drawable/linked_in_button" />

            <ImageButton
                android:id="@+id/ib_instagram"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/margin_normal"
                android:background="@drawable/instagram_button" />

        </LinearLayout>


        <com.google.android.material.button.MaterialButton
            android:id="@+id/mb_message_editContact"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/margin_normal"
            android:layout_marginVertical="@dimen/margin_small"
            android:backgroundTint="?attr/colorPrimary"
            android:padding="18dp"
            android:text="@string/mb_message"
            android:textSize="@dimen/text_large" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>